--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,14 @@
 {
-    "short_name": "High Performance",
     "name": "High Performance",
+    "short_name": "High Performance",
     "icons": [{
-            "src": "/img/icon192.png",
-            "type": "image/png",
-            "sizes": "192x192"
-        },
-        {
-            "src": "/img/icon512.png",
-            "type": "image/png",
-            "sizes": "512x512"
-        }
-    ],
-    "start_url": "/?utm=pwa",
-    "background_color": "#FFFF",
-    "display": "fullscreen",
+        "src": "/img/icon192.png",
+        "sizes": "192x192"
+    }],
+    "display": "standalone",
+    "scope": "/",
+    "start_url": "./?homescreen=true",
     "orientation": "portrait",
-    "theme_color": "#FFFF"
+    "theme_color": "#FFFF",
+    "background_color": "#FFFF"
 }
