--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,13 @@
 {
     "name": "High Performance",
-    "short_name": "High Performance",
+    "short_name": "High Perform",
     "theme_color": "#ffffff",
     "background_color": "#ffffff",
     "display": "standalone",
-    "start_url": "/",
+    "scope": "/",
+    "start_url": "/?utm_source=homescreen",
+    "lang": "pt-BR",
+    "orientation": "any",
     "icons": [{
             "src": "img/icon-72x72.png",
             "sizes": "72x72",
@@ -45,6 +48,5 @@
             "sizes": "512x512",
             "type": "image/png"
         }
-    ],
-    "splash_pages": null
+    ]
 }
