--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "High Performance",
-    "short_name": "High Perform",
+    "short_name": "High Performance",
     "theme_color": "#ffffff",
     "background_color": "#ffffff",
     "display": "standalone",
