--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,8 @@
     "short_name": "High Performance",
     "theme_color": "#ffffff",
     "background_color": "#ffffff",
-    "display": "standalone",
-    "scope": "/",
-    "start_url": "/?utm_source=homescreen",
-    "lang": "pt-BR",
-    "orientation": "any",
+    "display": "fullscreen",
+    "start_url": "https://highperformance.herokuapp.com/",
     "icons": [{
             "src": "img/icon-72x72.png",
             "sizes": "72x72",
@@ -48,5 +45,6 @@
             "sizes": "512x512",
             "type": "image/png"
         }
-    ]
+    ],
+    "splash_pages": null
 }
