--- a/manifest.json
+++ b/manifest.json
@@ -6,13 +6,43 @@
     "display": "fullscreen",
     "start_url": "https://highperformance.herokuapp.com/",
     "icons": [{
+            "src": "img/icon-16x16.png",
+            "sizes": "16x16",
+            "type": "image/png"
+        },
+        {
+            "src": "img/icon-32x32.png",
+            "sizes": "32x32",
+            "type": "image/png"
+        },
+        {
+            "src": "img/icon-57x57.png",
+            "sizes": "57x57",
+            "type": "image/png"
+        },
+        {
+            "src": "img/icon-60x60.png",
+            "sizes": "60x60",
+            "type": "image/png"
+        },
+        {
             "src": "img/icon-72x72.png",
             "sizes": "72x72",
             "type": "image/png"
         },
         {
+            "src": "img/icon-76x76.png",
+            "sizes": "76x76",
+            "type": "image/png"
+        },
+        {
             "src": "img/icon-96x96.png",
             "sizes": "96x96",
+            "type": "image/png"
+        },
+        {
+            "src": "img/icon-120x120.png",
+            "sizes": "120x120",
             "type": "image/png"
         },
         {
@@ -31,8 +61,23 @@
             "type": "image/png"
         },
         {
+            "src": "img/icon-167x167.png",
+            "sizes": "167x167",
+            "type": "image/png"
+        },
+        {
+            "src": "img/icon-180x180.png",
+            "sizes": "180x180",
+            "type": "image/png"
+        },
+        {
             "src": "img/icon-192x192.png",
             "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "img/icon-256x256.png",
+            "sizes": "256x256",
             "type": "image/png"
         },
         {
