--- a/manifest.json
+++ b/manifest.json
@@ -6,50 +6,9 @@
     "display": "fullscreen",
     "start_url": "https://highperformance.herokuapp.com/",
     "icons": [{
-            "src": "img/icon-72x72.png",
-            "sizes": "72x72",
-            "type": "image/png"
-        },
-        {
-            "src": "img/icon-96x96.png",
-            "sizes": "96x96",
-            "type": "image/png"
-        },
-        {
-            "src": "img/icon-120x120.png",
-            "sizes": "120x120",
-            "type": "image/png"
-        },
-        {
-            "src": "img/icon-144x144.png",
-            "sizes": "144x144",
-            "type": "image/png"
-        },
-        {
-            "src": "img/icon-152x152.png",
-            "sizes": "152x152",
-            "type": "image/png"
-        },
-        {
-            "src": "img/icon-180x180.png",
-            "sizes": "180x180",
-            "type": "image/png"
-        },
-        {
-            "src": "img/icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "img/icon-384x384.png",
-            "sizes": "384x384",
-            "type": "image/png"
-        },
-        {
-            "src": "img/icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ],
+        "src": "img/iconLogo.png",
+        "sizes": "72x72",
+        "type": "image/png"
+    }],
     "splash_pages": null
 }
