--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,21 @@
             "type": "image/png"
         },
         {
+            "src": "img/icon-144x144.png",
+            "sizes": "144x144",
+            "type": "image/png"
+        },
+        {
+            "src": "img/icon-152x152.png",
+            "sizes": "152x152",
+            "type": "image/png"
+        },
+        {
+            "src": "img/icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
             "src": "img/icon-384x384.png",
             "sizes": "384x384",
             "type": "image/png"
