--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "short_name": "High Performance",
     "theme_color": "#ffffff",
     "background_color": "#ffffff",
-    "display": "fullscreen",
+    "display": "standalone",
     "start_url": "https://highperformance.herokuapp.com/",
     "icons": [{
             "src": "img/icon-72x72.png",
