--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,11 @@
 {
     "name": "High Performance",
     "short_name": "High Performance",
-    "theme_color": "#ffffff",
-    "background_color": "#ffffff",
-    "display": "standalone",
     "start_url": "https://highperformance.herokuapp.com/",
+    "display": "standalone",
+    "orientation": "portrait",
+    "background_color": "#fff",
+    "theme_color": "#fff",
     "icons": [{
             "src": "img/icon-72x72.png",
             "sizes": "72x72",
