--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,5 +1,5 @@
 const path = require("path");
 module.exports = {
-    config: path.resolve("config","database.js"),
-    // models: path.resolve("models"),
+    "config": path.resolve("config","database.js"),
+    //"models-path": path.resolve("models"),
 }
