--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
+    "nodemon": "^2.0.4",
     "sequelize": "^5.21.7",
     "sequelize-cli": "^5.5.1",
     "system": "^2.0.1"
