--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
@@ -19,7 +20,10 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
+    "nodejs-nodemailer-outlook": "^1.2.3",
+    "nodemailer": "^6.4.8",
     "nodemon": "^2.0.4",
+    "req-flash": "0.0.3",
     "sequelize": "^5.21.7",
     "sequelize-cli": "^5.5.1",
     "system": "^2.0.1"
