--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "restart": "pkill -9 node && start",
+    "kill": "pkill -9 node"
   },
   "dependencies": {
     "bcrypt": "^4.0.1",
