--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "restart": "npx kill-port 3000 && start",
-    "kill": "npx kill-port 3000"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^4.0.1",
